Fix modal component on mobile.

--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -123,12 +123,15 @@ header {
         right: -300px;
     }
 
+    .mobile-menu__scrollable {
+        overflow: scroll;
+    }
+
     #mobile-menu {
         background: $green;
         width: 70%;
         max-width: 300px;
         height: 100%;
-        overflow: scroll;
         top: 0;
         z-index: 100;
         position: fixed;
